--- a/Exploratory_Data_Analysis_Haberman_(1).ipynb
+++ b/Exploratory_Data_Analysis_Haberman_(1).ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Exploratory Data Analysis Haberman (1).ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/lureevnat/Data-Science-Algorithms/blob/master/Exploratory_Data_Analysis_Haberman_(1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "colab_type": "text",
